Complete CSS assignment

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -25,3 +25,12 @@ section {
   margin: 5px 5px 5px 5px;
   padding: 5px 5px 5px 5px;
 }
+
+.social-btn {
+  background-color: #ccc;
+  border: 5px solid #99c;
+  padding: 20px;
+  position: relative;
+  left: 30px;
+  top: 90px;
+}
