--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -20,6 +20,10 @@
         <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter post body" %>
       </div>
       <div class="form-group">
+        <%= f.label :summary_body %>
+        <%= f.text_area :summary_body, rows: 8, class: 'form-control', placeholder: "Enter summary" %>
+      </div>
+      <div class="form-group">
         <%= f.submit "Save", class: 'btn btn-success' %>
       </div>
     <% end %>
