--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -18,8 +18,10 @@
             <%= post.comments.count %> Comments
           </small>
         </div>
+        
       </div>
     <% end %>
+    <%= will_paginate @posts %>
   </div>
   <div class="col-md-4">
     <% if policy(Post.new).create? %>
