--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,10 +1,9 @@
 <h1>Edit Post</h1>
-
 <div class="row">
   <div class="col-md-4">
     <p>Guidelines for posts</p>
     <ul>
-      <li>Make sure the it rhymes.</li>
+      <li>Make sure it rhymes.</li>
       <li>Don't use the letter "A".</li>
       <li>The incessant use of hashtags will get you banned.</li>
     </ul>
