--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,4 @@
 <h1><%= markdown_to_html @post.title %></h1>
-
 <div class="row">
   <div class="col-md-8">
     <small>
@@ -14,4 +13,5 @@
       <%= link_to "Edit", edit_topic_post_path(@topic, @post), class: 'btn btn-success' %>
     <% end %>
   </div>
+  <%= image_tag(@post.image.full.url) if @post.image? %>
 </div>
