--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,17 +1,33 @@
+<h5><%= Post %></h5>
 <h1><%= markdown_to_html @post.title %></h1>
 
 <div class="row">
   <div class="col-md-8">
+    <h4><%= markdown_to_html @post.body %></h4>
     <small>
       <%= image_tag(@post.user.avatar.tiny.url) if @post.user.avatar? %>
       submitted <%= time_ago_in_words(@post.created_at) %> ago by
       <%= @post.user.name %>
     </small>
-    <p><%= markdown_to_html @post.body %></p>
   </div>
+  
   <div class="col-md-4">
     <% if policy(@post).edit? %>
-      <%= link_to "Edit", edit_topic_post_path(@topic, @post), class: 'btn btn-success' %>
+      <%= link_to "Edit Post", edit_topic_post_path(@topic, @post), class: 'btn btn-success' %>
     <% end %>
+  </div>
+  
+  <div class="col-md-8">
+    <% this_post_comments = @post.comments %>
+    <% if this_post_comments.count > 0 %>
+      <h5><%= "Comments" %></h5>
+    <% end %>
+    <% this_post_comments.each do |c| %>
+      <%= render partial: 'comments/comment', locals: {cmt: c} %>
+    <% end %>
+  </div>
+  
+  <div class="col-md-8">
+    <%= render partial: 'comments/form', locals: { topic: @topic, post: @post,  comment: @post.comments.new} %>
   </div>
 </div>
