--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row">
   <div class="col-md-8">
-    <% @topics.each do |topic| %>
+    <% @topic.each do |topic| %>
       <div class="media">
         <div class="media-body">
           <h4 class="media-heading">
@@ -14,7 +14,7 @@
         </div>
       </div>
     <% end %>
-    <%= will_paginate @topics %>
+    <%= will_paginate @topic %>
   </div>
   <div class="col-md-4">
     <% if policy(Topic.new).create? %>
