--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,3 +1,4 @@
+<h4><%= "Topic" %></h4>
 <h1><%= @topic.name %></h1>
  
 <% if policy(@topic).update? %>
@@ -7,6 +8,9 @@
 <div class="row">
   <div class="col-md-8">
     <p class="lead"><%= @topic.description %></p>
+    <% if @posts %>
+      <h4><%= "Posts" %></h4>
+    <% end %>
     <% @posts.each do |post| %>
       <div class="media">
         <div class="media-body">
@@ -20,7 +24,6 @@
             <%= post.comments.count %> Comments
           </small>
         </div>
-        
       </div>
     <% end %>
     <%= will_paginate @posts %>
