--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,10 +1,10 @@
 <br/>
 <div class="jumbotron">
   <h1>Bloccit</h1>
-  <p>Bloccit is a resource for sharing links with your friends!</p>
+  <p>Bloccit is a resource for sharing <%= link_to "links", topics_path, class: 'btn btn-success btn-lg' %> with your friends!</p>
   <p>
-      <%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary' %> or
-      <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> today!
+    <%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary' %> or
+    <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> today!
   </p>
 </div>
 
