--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -14,7 +14,10 @@
         </div>
       </div>
     <% end %>
-    <%= will_paginate @topics %>
+    
+    <% prev_link, next_link = will_paginate page: params[:page] || 1 %>
+    <%= link_to "Prev", prev_link  if prev_link %>
+    <%= link_to "Next", next_link %>
   </div>
   <div class="col-md-4">
     <% if policy(Topic.new).create? %>
