--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -18,10 +18,12 @@
             <%= post.comments.count %> Comments
           </small>
         </div>
-        
       </div>
     <% end %>
-    <%= will_paginate @posts %>
+    
+    <% prev_link, next_link = will_paginate page: params[:page] || 1 %>
+    <%= link_to "Prev", prev_link  if prev_link %>
+    <%= link_to "Next", next_link %>
   </div>
   <div class="col-md-4">
     <% if policy(Post.new).create? %>
