--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,11 +1,14 @@
-<% if cmt.body.nil? %>
-  <h4><%= markdown_to_html "comment body is nil" %></h4>
-<% else %>
-  <h4><%= markdown_to_html cmt.body %></h4>
-  <small>
-    <% comment_author = User.where(:id=>cmt.user_id).first %>
-    <%= image_tag(comment_author.avatar.tiny.url) if comment_author.avatar? %>
-    submitted <%= time_ago_in_words(cmt.created_at) %> ago by
-    <%= comment_author.name %>
-  </small>
-<% end %>
+<div class="media">
+  <%= link_to '#', class: 'pull-left' do %>
+    <%= image_tag(comment.user.avatar.tiny.url) if comment.user.avatar? %>
+  <% end %>
+  <div class="media-body">
+    <small>
+      <%= comment.user.name %> commented <%= time_ago_in_words(comment.created_at) %> ago
+      <% if policy(comment).destroy? %>
+        | <%= link_to "Delete", [@topic, @post, comment], method: :delete %>
+      <% end %>
+    </small>
+    <p><%= comment.body %></p>
+  </div>
+</div>
