--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,7 +5,7 @@
   <div class="col-md-8">
     <h4><%= markdown_to_html @post.body %></h4>
     <small>
-      <%= image_tag(@post.user.avatar.tiny.url) if @post.user.avatar? %>
+      <%= image_tag(@post.user.avatar.small.url) if @post.user.avatar? %>
       submitted <%= time_ago_in_words(@post.created_at) %> ago by
       <%= @post.user.name %>
     </small>
@@ -15,6 +15,9 @@
     <% if policy(@post).edit? %>
       <%= link_to "Edit Post", edit_topic_post_path(@topic, @post), class: 'btn btn-success' %>
     <% end %>
+    <% if policy(@post).destroy? %>
+       <%= link_to "Delete Post", [@topic, @post], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this post?' } %>
+    <% end %>
   </div>
   
   <div class="col-md-8">
@@ -23,7 +26,7 @@
       <h5><%= "Comments" %></h5>
     <% end %>
     <% this_post_comments.each do |c| %>
-      <%= render partial: 'comments/comment', locals: {cmt: c} %>
+    <%= render partial: 'comments/comment', locals: {comment: c} %>
     <% end %>
   </div>
   
