--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,9 @@
  *= require_tree .
  *= require_self
  */
+
+// "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
+@import "bootstrap-sprockets";
 @import "bootstrap";
 
 .user-info {
@@ -21,4 +24,9 @@
 
 .nav {
   margin-top: 5px;
+}
+
+.vote-arrows {
+  width: 40px;
+  text-align: center;
 }
