--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -29,6 +29,7 @@
       <%= pluralize(@post.down_votes, 'down vote') %>
     </small>
   </div>
+  <%= render partial: 'favorites/favorite', locals: { post: @post } %>
   
   <div class="col-md-8">
     <% this_post_comments = @post.comments %>
