--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -48,12 +48,17 @@
         <%= f.file_field :avatar %>
       </div>
       <div class="form-group">
+        <%= f.label :email_favorites %>
+        <%= f.check_box :email_favorites %>
+        <p class="help-block">Be notified for new comments on your favorites</p>
+      </div>
+      <div class="form-group">
         <%= f.submit "Update", class: 'btn btn-success' %>
       </div>
     <% end %>
     <h3>Cancel my account</h3>
     <div class="form-group">
-        <p><%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-danger' %></p>
+      <p><%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-danger' %></p>
     </div>
   </div>
 </div>
