--- a/app/views/favorites/_favorite.html.erb
+++ b/app/views/favorites/_favorite.html.erb
@@ -1,7 +1,7 @@
 <% if policy(Favorite.new).create? %>
   <div class="favorite">
     <% if favorite = current_user.favorited(post) %>
-    <b>*** Favorite ***</b></br>
+    <b>**** Favorite ****</b></br>
     <%= link_to [post, favorite], class: 'btn btn-danger', method: :delete do %>
         <i class="glyphicon glyphicon-star-empty"> </i>&nbsp; Unfavorite
       <% end %>
