--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -14,22 +14,7 @@
     <% if @posts.count > 1 %>
       <h4><%= "#{@posts.count} Posts" %></h4>
     <% end %>
-    <% @posts.each do |post| %>
-      <div class="media">
-        <%= render partial: 'votes/voter', locals: { post: post } %>
-        <div class="media-body">
-          <h4 class="media-heading">
-            <%= link_to (markdown_to_html post.title), [@topic, post] %>
-          </h4>
-          <small>
-            <%= image_tag(post.user.avatar.tiny.url) if post.user.avatar? %>
-            submitted <%= time_ago_in_words(post.created_at) %> ago by
-            <%= post.user.name %><br/>
-            <%= post.comments.count %> Comments
-          </small>
-        </div>
-      </div>
-    <% end %>
+    <%= render @posts %>
     <%= will_paginate @posts %>
   </div>
   <div class="col-md-4">
