--- a/app/views/topics/posts/show.html.erb
+++ b/app/views/topics/posts/show.html.erb
@@ -1,6 +1,6 @@
-<h5><%= Post %></h5>
+<h4><%= Post %></h4>
 <div class="row">
-  <div class="col-md-8">
+  <div class="col-md-1">
     <%= render partial: 'votes/voter', locals: { post: @post } %>
   </div>  
   <div class="col-md-8">
@@ -13,38 +13,30 @@
     </small>
   </div>
   
-  <div class="col-md-4">
+  <div class="col-md-3">
     <% if policy(@post).edit? %>
       <%= link_to "Edit Post", edit_topic_post_path(@topic, @post), class: 'btn btn-success' %>
     <% end %>
     <% if policy(@post).destroy? %>
        <%= link_to "Delete Post", [@topic, @post], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this post?' } %>
     <% end %>
-  </div>
-  
-  <div>
     <h3><%= pluralize(@post.points, 'point') %></h3>
     <small>
       <%= pluralize(@post.up_votes, 'up vote') %>,
       <%= pluralize(@post.down_votes, 'down vote') %>
     </small>
-  </div>
-  <%= render partial: 'favorites/favorite', locals: { post: @post } %>
-  
-  <div class="col-md-8">
-    <% this_post_comments = @post.comments %>
-    <% if this_post_comments.count == 1 %>
-      <h5><%= "1 Comment" %></h5>
-    <% end %>
-    <% if this_post_comments.count > 1 %>
-      <h5><%= "#{this_post_comments.count} Comments" %></h5>
-    <% end %>
-    <% this_post_comments.each do |c| %>
-      <%= render partial: 'comments/comment', locals: {comment: c} %>
-    <% end %>
+    <%= render partial: 'favorites/favorite', locals: { post: @post } %>
   </div>
   
-  <div class="col-md-8">
-    <%= render partial: 'comments/form', locals: { topic: @topic, post: @post,  comment: @post.comments.new} %>
+  <div class="col-md-12">
+    <h4>Comments</h4>
+  </div>
+  
+  <div class='js-comments col-md-12'>
+    <%= render partial: 'comments/comment', collection: @comments %>
+  </div>
+  
+  <div class='new-comment col-md-12'>
+    <%= render partial: 'comments/form' %>
   </div>
 </div>
